# ttt

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.rs  eval.rs  flake.nix  lib.rs  main.rs
.github/workflows/: nix-build.yml  tests.yml
eval/: equivalence.rs  mod.rs  reduction.rs  truth_table.rs
io/: input.rs  output.rs
source/: lexer.rs  mod.rs  parser.rs
tests/: cli_integration.rs  integration_tests.rs  readme_examples.rs
