[package]
name = "ttt"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ttt"
path = "main.rs"

[lib]
path = "lib.rs"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
